Zoom button icon alignment fix (#1262)
* Increased size of zoom and layer toggle buttons

* Zoom button icon alignment fix

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -545,6 +545,7 @@ body {
 .mapboxgl-ctrl-group > button {
     width: 35px !important;
     height: 35px !important;
+    background-size: 100% 100%;
 }
 
 
